--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                     <div class="col-4 text-center">
                     <label id="product3"> Golden retriever</label>
-                    <img src="golden retreiver.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <img src="um-renegade-sport-s-24200.jpg" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
                     <label for="product3" id="price3">27000.00</label>
                     <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
