--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-4 text-center">
                         <label id="product2"> Charlotte </label>
-                        <img src="3.jpeg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <img src="kawasaki-vulcan-s-72773.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product2" id="price2">370.00</label>
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
