--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                <div class="col-4 text-center">
                         <label id="product3"> Spurs  </label>
-                        <img src="4.jpeg " style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <img src="motorstar-cafe-400-marketing-image-145459.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product3" id="price3">330.00</label>
                         <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
