--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                <div class="col-4 text-center">
                         <label id="product4"> Golden state warriors  </label>
-                        <img src=" 5.jpeg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <img src="sec00_01_yzf-r1.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product4" id="price4">370.00</label>
                         <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
