--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                <div class="col-4 text-center">
                         <label id="product6"> Dallas </label>
-                        <img src="7.jpeg " style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <img src="honda-rebel-63708.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product6" id="price6">300.00</label>
                         <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
                 </div>
