--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container">
             <div class="row">
                 <div class="col-4 text-center">
-                    <label id="product1"> Curaiser </label>
+                    <label id="product1"> Cruiser </label>
                     <img src="Triumph-Rocket-III-motorcycle-2005.jpg" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
                     <label for="product1" id="price1">450,000</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
