--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
                 </div>
                <div class="col-4 text-center">
-                        <label id="product6"> Dallas </label>
+                        <label id="product6"> Honda Rebel </label>
                         <img src="honda-rebel-63708.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product6" id="price6">399,000</label>
                         <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
