--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
                <div class="col-4 text-center">
-                        <label id="product5"> Lakers  </label>
+                        <label id="product5"> Um Renegade Sport S  </label>
                         <img src="um-renegade-sport-s-24200.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product5" id="price5">148,000</label>
                         <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
