--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                        <label id="product2"> Charlotte </label>
+                        <label id="product2"> Kawasaki Vulcan S</label>
                         <img src="kawasaki-vulcan-s-72773.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product2" id="price2">415,000</label>
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
                <div class="col-4 text-center">
-                        <label id="product3"> Spurs  </label>
+                        <label id="product3"> Motor StarCaffe 400 </label>
                         <img src="motorstar-cafe-400-marketing-image-145459.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product3" id="price3">140,000</label>
                         <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
                <div class="col-4 text-center">
-                        <label id="product4"> Golden state warriors  </label>
+                        <label id="product4"> Kawasaki Ninja ZX-25R </label>
                         <img src="sec00_01_yzf-r1.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product4" id="price4">406,000</label>
                         <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
