--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     </div>
       <script>
         var products = [
-        { id: 1, name: "Miami", price: 450,000 },
-        { id: 2, name: "charlotte", price: 415,000 },
-        { id: 3, name: "Spurs", price: 140,00 },
-        { id: 4, name: "Goldern state warriors", price: 406,000 },
-        { id: 5, name: "Lakers", price: 148,000 },
-        { id: 6, name: "Dallas", price: 399,000 },
+        { id: 1, name: "Cruiser", price: 450,000 },
+        { id: 2, name: "Kawasaki Vulcan", price: 415,000 },
+        { id: 3, name: "Motor StarCaffe 400", price: 140,00 },
+        { id: 4, name: "Kawasaki Ninja ZX-25R", price: 406,000 },
+        { id: 5, name: "Um Renegade Sport S", price: 148,000 },
+        { id: 6, name: "Honda Rebel", price: 399,000 },
     ];
     
     
