--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 <script src="index.js"></script>
      <br><br>
-       <div class="card text-center">
+       <div class="card text-top center">
       <div class="card-footer text-body-secondary">
         <div class="badge text-bg-info">ALCAIDE SHOP</div>
 
