--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
      <br><br>
        <div class="card text-top center">
       <div class="card-footer text-body-secondary">
-        <div class="badge text-bg-info">ALCAIDE SHOP</div>
+        <div class="badge text-bg-info">ALCAIDE SHOP
+        Call#09567053214</div>
 
       
     </div>
