--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-               <h2> Motor Shop "Fast cars, fast life, fast everything" </h2>
+               <h2> Motor Shop 
+                  "Fast cars, fast life, fast everything" </h2>
                 <hr class="hr" />
                 </div>
             </div>
