--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <body> 
     <div class="container">
         <div class="row">
-            <div class="col-12 text-topcenter">
+            <div class="col-12 text-centertop">
                <h2> Motor Shop </h2>
                   <h2>"Fast cars, fast life, fast everything" </h2>
                 <hr class="hr" />
