--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <div class="row">
             <div class="col-12text-center">
                <h2> Motor Shop </h2>
-                  <h2>"Fast cars, fast life, fast everything" </h2>
+                <div class="col-12text-center"> 
+               <h2>"Fast cars, fast life, fast everything" </h2>
                 <hr class="hr" />
                 </div>
             </div>
