--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div class="row">
             <div class="col-12 text-center">
                <h1> Motor Shop </h1>
+               <!--Paragraph Tag -->
                 <div class="col-12 text-center"> 
                <h2>"Fast cars, fast life, fast everything" </h2>
                 <hr class="hr" />
