--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
         <div class="row">
             <div class="col-12 text-center">
                <h1> Motor Shop </h1>
-               <!--Paragraph Tag -->
+               <!DOCTYPE html>
+
+<html>
+ 
+
+<body>
+
+    <h1>GeeksforGeeks</h1>
+
+    <!--Paragraph Tag -->
+
+    <p>This is paragraph text</p>
+ 
+
+    <!--Big Tag-->
+
+    <big>This is big Tag text</big>
+
+</body>
+ 
+
+</html>
                 <div class="col-12 text-center"> 
                <h2>"Fast cars, fast life, fast everything" </h2>
                 <hr class="hr" />
