--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <h1>GeeksforGeeks</h1>
+    <h1>   </h1>
 
     <!--Paragraph Tag -->
 
@@ -26,7 +26,7 @@
 
     <!--Big Tag-->
 
-    <big>This is big Tag text</big>
+    <big>    </big>
 
 </body>
  
