--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="card-footer text-body-secondary">
         <div class="badge text-bg-info">ALCAIDE SHOP
         Call#09567053214</div>
-
+<p style="background-color: lightblue;">This is a paragraph with a light blue background.</p>
       
     </div>
     </div>
