--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <div class="row">
             <div class="col-12 text-center">
                <h1> Motor Shop </h1>
+               <p style="background-color: gray ;">This is a paragraph with a light blue background.</p>
+      
                 <div class="col-12 text-center"> 
                <h2>"Fast cars, fast life, fast everything" </h2>
                 <hr class="hr" />
@@ -70,8 +72,6 @@
       <div class="card-footer text-body-secondary">
         <div class="badge text-bg-info">ALCAIDE SHOP
         Call#09567053214</div>
-<p style="background-color: lightblue;">This is a paragraph with a light blue background.</p>
-      
     </div>
     </div>
       <script>
