--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-12 text-center">
                <h1> Motor Shop </h1>
-               <p style="background-color: gray ;"><h1>Fast cars, fast life, fast everything .</p>
+               <p style="background-color: gray ;">Fast cars, fast life, fast everything .</p>
       
                 <div class="col-12 text-center"> 
                <h2>"Fast cars, fast life, fast everything" </h2>
