--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-12 text-center">
                <h1> Motor Shop </h1>
-               </h2><p style="background-color: gray ;"<h2>Fast cars, fast life, fast everything </h2>.</p>
+               <h2><p style="background-color: gray ;"Fast cars, fast life, fast everything.</p> </h2>
       
                 <div class="col-12 text-center"> 
                <h2>"Fast cars, fast life, fast everything" </h2>
