--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <script src="index.js"></script>
      <br><br>
        <div class="card text-top center">
-      <div class="card-footer text-body-tertiary">
+      <div class="card-footer text-body-primary green">
         <div class="badge text-bg-info">ALCAIDE SHOP
         Call#09567053214</div>
     </div>
